hero new style working

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .backgroundNav{
-  background-image: url(../src/assets/NavBg.png);
+  background-image: url(../src/assets/NavbarBG.svg);
 }
 
 .HeroImg{
