--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,11 @@
 }
 
 .h2-Display{
-  margin-left:20%; 
   padding-top:5%;
 }
 .display-container{
-  margin-left:20%;
-  margin-right:20%;
+  margin-left:auto;
+  margin-right:auto;
   
  
   display:flex;
